[package]
name = "sink-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "4", features = ["rustls"] }
actix-files = "0.6.0"
rustls = "0.20.2"
rustls-pemfile = "0.3"
rcgen = "0.9.2"
serde = { version = "1.0", features = ["derive"] }